--- a/public/Tripwix/Tripwix.html
+++ b/public/Tripwix/Tripwix.html
@@ -51,7 +51,6 @@
                     </div>
                     <div class="button">
                         <button class="btn_main1" id="get_started">Get Started</button>
-                        <div class="black-line"></div>
                     </div>
                 </div>
                 
@@ -73,7 +72,7 @@
                         <div class="modal-body">
                             <div class="dates">
                                 <div style="position: relative;">
-                                    <input id="fromDate" type="text" name="datefilter1" value="" class="dateinput" placeholder="From">
+                                    <input id="fromDate" inputmode="none" type="text" name="datefilter1" value="" class="dateinput" placeholder="From">
                                    
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
@@ -81,7 +80,7 @@
                                     </svg>
                                 </div>
                                 <div style="position: relative;">
-                                    <input id="toDate" type="text" name="datefilter2" value="" class="dateinput2" placeholder="To">
+                                    <input id="toDate" type="text" inputmode="none" name="datefilter2" value="" class="dateinput2" placeholder="To">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
                                         <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857V3.857z"/>
                                         <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
